# bn_lightweight-charts-python

./: .gitignore  LICENSE  README.md  build.sh  package-lock.json  package.json  pyproject.toml  rollup.config.js  setup.py
.github/ISSUE_TEMPLATE/: bug.yaml  question.yaml
bn_lightweight_charts/: __init__.py  abstract.py  chart.py  drawings.py  util.py  widgets.py
bn_lightweight_charts/js/: bundle.dev.js  bundle.js  index.html  index_bn.html  lightweight-charts.js
docs/source/: polygon.md
docs/source/_templates/: landing.html
docs/source/examples/: events.md  gui_examples.md  screenshot.md  subchart.md  table.md  toolbox.md  yfinance.md
docs/source/tutorials/: events.md  getting_started.md
examples/1_setting_data/: setting_data.py
examples/2_live_data/: live_data.py
examples/3_tick_data/: tick_data.py
examples/4_line_indicators/: line_indicators.py
examples/5_styling/: styling.py
examples/6_callbacks/: callbacks.py
lightweight_charts/: __init__.py  abstract.py  chart.py  util.py  widgets.py
lightweight_charts/js/: bundle.dev.js  bundle.js  index.html  index_bn.html  lightweight-charts.js  lightweight-charts.standalone.development.js  styles.css
src/drawing/: pane-renderer.ts  pane-view.ts
src/general/: global-params.ts  handler.ts  legend.ts
src/horizontal-line/: axis-view.ts
src/vertical-line/: axis-view.ts
test/: test_chart.py  test_returns.py  test_table.py  test_toolbox.py  test_topbar.py  util.py
