[project]
name = "bn-lightweight-charts"
version = "0.2.1"
description = "Python framework for TradingView's Lightweight Charts JavaScript library."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "smalinin"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8"
dependencies = [
    "pandas",
    "tzlocal",
]


[project.urls]
"Homepage" = "https://github.com/smalinin/bn_lightweight-charts-python"
"Source" = "https://github.com/smalinin/bn_lightweight-charts-python"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bn_lightweight_charts", "bn_lightweight_charts/**"]

[tool.hatch.build.targets.wheel]
packages = ["bn_lightweight_charts"]

